# gbbCalibPackage

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog  Config.cxx  Config.h  CrossCheckPlotter.cxx  CrossCheckPlotter.h  FitData.cxx  FitData.h  Fitter.cxx  Fitter.h  FlavourFracCorrector.cxx  GbbTupleAna.cxx  GbbTupleAna.h  HistPlotter.cxx  HistPlotter.h  HistogramHandler.cxx  HistogramHandler.h  HistogramService.cxx  Makefile  Plotter.cxx  Plotter.h  README.md  SampleInfo.cxx  SampleInfo.h  ScaleFactorCalculator.cxx  ScaleFactorCalculator.h  TrackSmearer.cxx  TrackSmearer.h  TupleAna.cxx  TupleAna.h  run_PlotFitsWithSys.cxx  run_PlotTemplates.cxx  run_gbbTupleAna.cxx  run_makeReweightHisto.cxx  run_makeSFInputs.cxx  setup.sh
GbbCalibration/: Config.h  GbbTupleAna.h  ScaleFactorCalculator.h  TupleAna.h
Root/: Config.cxx  FitData.cxx  FitData.cxx.bkp  Fitter.cxx.bkp  FlavourFracCorrector.cxx  GbbFillHelp.cxx  GbbSelectionHelp.cxx  GbbTupleAna.cxx  HistogramService.cxx  ScaleFactorCalculator.cxx  TupleAna.cxx
ScaleFactorCalculator/: ChangeLog  Config.cxx  Config.h  FitData.cxx  Fitter.cxx  Fitter.h  Makefile  ScaleFactorCalculator.cxx  ScaleFactorCalculator.h
SubjetBScore/: Compile.sh  GbbAna.C  GbbAna.h  MC_result.root  Main.C  MakeHist.C  MakeHist.h  State.h  filelist_MC_test.txt
TRExFitter_result/: Rebin.root
configs/: config_CrossCheck.cfg  run_GbbTupleAna_Calib.cfg  run_GbbTupleAna_MuonFilterCheck.cfg  testconfig.cfg
datasets/: README  (+40 more)
run_MC/: .asetup.save  (+14 more)
source/TRExFitter/CommonSystSmoothingTool/: CMakeLists.txt  README.md
source/TRExFitter/CommonSystSmoothingTool/Root/: PlotHist.cxx  SmoothHist.cxx  SmoothingTool.cxx  TRExTools.cxx
source/TRExFitter/CommonSystSmoothingTool/SmoothSystematics/: SmoothHist.h  SmoothingTool.h
source/TRExFitter/CommonSystSmoothingTool/doc/: use_as_library.md
source/TRExFitter/CommonSystSmoothingTool/share/: 13TeV_TwoLepton_2tag2pjet_150ptv_SR_mvaTEST.root
source/TRExFitter/CommonSystSmoothingTool/util/: testInputFile.cxx  testSmooth.cxx
source/gbbCalibration/: .gitignore  CMakeLists.txt  README.md
source/gbbCalibration/GbbCalibration/: Fitter.h  GbbTupleAna.h
source/gbbCalibration/Root/: Config.cxx  FitData.cxx  FitData.cxx.bkp  Fitter.cxx  FlavourFracCorrector.cxx  GbbFillHelp.cxx  GbbTupleAna.cxx  LinkDef.h  ScaleFactorCalculator.cxx  TupleAna.cxx
source/gbbCalibration/common/: Config.cxx  FlavourFracCorrector.h
source/gbbCalibration/data/: PMGxsecDB_mc16_2020-03-09.txt  SampleInfo_MuonFilterTest.txt  xsections.txt  xsections_r20p7.txt
source/gbbCalibration/data/configs/: GlobalConfig.cfg  README.md  binning.cfg  config_Calib_SF.cfg  config_CrossCheck.cfg  config_CrossCheck_SF.cfg  run_GbbTupleAna_Calib.cfg  run_GbbTupleAna_MuonFilterCheck.cfg  run_GbbTupleAna_Reweight.cfg  testconfig.cfg  trex_Calib_SF.cfg
source/gbbCalibration/data/examples/json/: calib_19Aug.json  calib_22Jan.json  calib_24July.json  calib_27July.json  calib_7Feb_R207.json  reweight_22Jan.json
source/gbbCalibration/gbbCalibration/: Config.h  FitData.h  HistogramService.h  ScaleFactorCalculator.h  TupleAna.h
source/gbbCalibration/helpers/: BinConfig.cxx  BinConfig.h  FlavourFracCorrector.cxx  FlavourFracCorrector.h  GbbUtil.cxx  GbbUtil.h  GlobalConfig.cxx  GlobalConfig.h  LinkDef.h  SFConfig.cxx  SFConfig.h
source/gbbCalibration/helpers/atlasstyle/: AtlasLabels.C  AtlasLabels.h  AtlasStyle.C
source/gbbCalibration/histMaker/: GbbFillHelp.cxx  GbbSelectionHelp.cxx  GbbStructures.h  GbbTupleAna.cxx  GbbTupleAna.h  HistogramService.cxx  HistogramService.h  LinkDef.h  README  TupleAna.cxx  TupleAna.h
source/gbbCalibration/histMaker/BTagging/: AsgToolTagger.cxx  AsgToolTagger.h  BJetTagger.cxx  BJetTagger.h  BTagger.cxx  BTagger.h  MV2c10Cutter.cxx  Makefile  XbbScoreCutter.cxx  XbbScoreCutter.h  XbbScoreHybridCutter.cxx  XbbScoreTagger.cxx  XbbScoreTagger.h  gbbUtil.cxx  gbbUtil.h
source/gbbCalibration/histMaker/XbbScoreCutter/: BTagger.cxx  BTagger.h  MV2c10Cutter.cxx  MV2c10Cutter.h  XbbScoreCutter.cxx  XbbScoreCutter.h  XbbScoreHybridCutter.h  gbbUtil.cxx  gbbUtil.h  run.cxx
source/gbbCalibration/python/: ConfigFunctions.py  PlotFunctions.py  README  TAxisFunctions.py  checkCorrelation.py  checkSystematicsPlots.py  generate_trex_config.py  help.txt  makeConsolidatedHistFile.py  makeCrossCheckInputs.py  makeCrossCheckInputsInclusiveLL_AllSys.py  makePostfitPlots.py  makePrefitPlots.py  makeRatioPlots.py  makeReweightHistos.py  makeTRExOutputPlots.py  makeTemplateComparisonPlots.py  makeTemplateComparisonPlots2.py  makeTemplateComparisonPlotsBetweenSamples.py  makeTopoPlots.py  makeTriggerTurnOnCurves.py  makeTruthJetPtPlots.py  printFlavFracs.py  rebin.py
source/gbbCalibration/python/old_scripts/: makeCrossCheckInputs.py
source/gbbCalibration/python/plotting/: makeTRExOutputPlots.py  makeTemplateComparisonPlots.py  makeTemplateComparisonPlotsBetweenSamples.py  makeTopoPlots.py  makeTruthJetPtPlots.py
source/gbbCalibration/scaleFactorCalculator/: FitData.cxx  FitData.h  Fitter.cxx  Fitter.cxx.bkp  Fitter.h  Fitter.h.bkp  ScaleFactorCalculator.cxx  ScaleFactorCalculator.h  ScaleFactorPlotHelp.cxx  ScaleFactorUncertaintyHelp.cxx
source/gbbCalibration/scripts/: generate_trex_config.py  run_trex.sh
source/gbbCalibration/scripts/NAFScripts/: run_gbbTupleAna_arrayList.sh  submit_gbbTupleAna_array.sh~  submit_hadd_batch.sh
source/gbbCalibration/scripts/NAFScripts_Old/: hadd_hist_mc.sh  run_gbbTupleAna_array.sh  run_hadd_hist_allSys.sh  run_hadd_hist_batch.sh
source/gbbCalibration/scripts/fullrunscripts/: README.md  batchfullrun.slr  fullrun.py
source/gbbCalibration/scripts/old_scripts/: check_Jobs.sh  submit_gbbTupleAna_array.sh
source/gbbCalibration/scripts/qsub_scripts/: run_gbbTupleAna_arrayList.sh  submit_gbbTupleAna_array.sh
source/gbbCalibration/scripts/slurm_scripts/: run_gbbTupleAna_arrayList.sh  submit_gbbTupleAna_array.sh
source/gbbCalibration/tests/: BTaggerTests.cxx  TestUtil.h  XbbScoreCutterTest.cxx  run_tests.cxx
source/gbbCalibration/util/: run_calculateSF.cxx  run_gbbTupleAna.cxx  run_trex.sh
(+1441 files in other folders)
